--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/user-management
     driver-class-name: com.mysql.jdbc.Driver
-    password: root
+    password: password
     username: root
   jpa:
     show-sql: true
@@ -17,3 +17,4 @@ spring:
 
 jwt:
   secret: password
+debug: false
